# lib2

./: .clangd  CMakeLists.txt  CMakePresets.json  README.md
benchmarks/: CMakeLists.txt
benchmarks/fmt/: CMakeLists.txt  char_write.cpp  int_base10.cpp  int_base2.cpp
benchmarks/io/: CMakeLists.txt  fstream_multiple_write.cpp  fstream_write.cpp  simple_string_parse.cpp  simple_write.cpp  string_write.cpp
benchmarks/string/: CMakeLists.txt  lazy_string.cpp  lazy_string_results.txt
cmake/: lib2Config.cmake.in
lib2/: CMakeLists.txt  compact_optional.ixx  concepts.ixx  indirect_iterator.ixx  lib2.ixx  locatable_object.ixx  shared.ixx  shared_win32.cpp  utility.ixx
lib2/benchmarking/: CMakeLists.txt  benchmark.ixx  benchmark_output.cpp  benchmark_output.ixx  benchmark_suite.ixx  benchmarking.ixx  benchmarking_context.ixx  do_not_optimize.ixx
lib2/err/: CMakeLists.txt  err.ixx  err_win32.cpp
lib2/fmt/: CMakeLists.txt  arithmetic.cpp  arithmetic.ixx  chrono.ixx  context.ixx  fmt.ixx  format.cpp  format.ixx  formatter.ixx  misc.ixx  parsers.ixx  ranges.ixx  string.cpp  string.ixx  unicode.ixx  utility.ixx
lib2/io/: CMakeLists.txt  character.ixx  fstream.ixx  fstream_win32.cpp  fstream_windows.cpp  io.ixx  iostream.ixx  istream.cpp  istream.ixx  ostream.ixx  spanstream.ixx  stream_traits.ixx  stringstream.ixx
lib2/iterator/: CMakeLists.txt  indirect_iterator.ixx  iterator.ixx
lib2/json/: json.ixx
lib2/match/: CMakeLists.txt  match.ixx  match_result.ixx
lib2/memory/: CMakeLists.txt  locatable_object.ixx  memory.ixx  tagged_pointer.ixx
lib2/meta/: CMakeLists.txt  constexpr_value.ixx  meta.ixx  type_list.ixx  value_list.ixx
lib2/platform/: CMakeLists.txt  architecture.ixx  bits.ixx  compiler.ixx  cpp_version.ixx  operating_system.ixx  platform.ixx
lib2/scan/: CMakeLists.txt  basic_scan_arg.ixx  basic_scan_context.ixx  basic_scan_parse_context.ixx  scan.ixx  scan_error.ixx  scanner.ixx
lib2/strings/: CMakeLists.txt  algorithm.ixx  character.ixx  fixed_string.ixx  lazy_string.ixx  string_literal.ixx  strings.ixx  unicode.ixx  utility.ixx  widen.h
lib2/test/: CMakeLists.txt  assert.ixx  assert_exception.ixx  test.ixx  test_case.ixx  test_result.ixx  test_suite.ixx
lib2/type_traits/: CMakeLists.txt  copy_traits.ixx  detector.ixx  function_traits.ixx  type_traits.ixx
src/: CMakeLists.txt  compact_optional.ixx  concepts.ixx  indirect_iterator.ixx  lib2.ixx  utility.ixx
src/benchmarking/: CMakeLists.txt  benchmark.ixx  benchmark_output.ixx  benchmark_suite.ixx  benchmarking.ixx  benchmarking_context.ixx  do_not_optimize.ixx
src/fmt/: CMakeLists.txt  arithmetic.cpp  arithmetic.ixx  chrono.ixx  fmt.ixx  format.ixx  misc.ixx  parsers.ixx  string.ixx  unicode.ixx
src/io/: CMakeLists.txt  character.ixx  file.cpp  file.ixx  fstream.ixx  io.ixx  iostream.ixx  istream.ixx  ostream.ixx  spanstream.ixx  stream_traits.ixx  stringstream.ixx
src/match/: CMakeLists.txt  match.ixx  match_result.ixx
src/platform/: CMakeLists.txt  architecture.ixx  bits.ixx  compiler.ixx  cpp_version.ixx  operating_system.ixx  platform.ixx
src/scan/: CMakeLists.txt  basic_scan_arg.ixx  basic_scan_context.ixx  basic_scan_parse_context.ixx  scan.ixx  scan_error.ixx  scanner.ixx
src/strings/: CMakeLists.txt  algorithm.ixx  character.ixx  lazy_string.ixx  string_literal.ixx  strings.ixx
src/strings/include/lib2/strings/: widen.h
src/test/: CMakeLists.txt  assert.ixx  assert_exception.ixx  test.ixx  test_case.ixx  test_result.ixx  test_suite.ixx
src/type_traits/: CMakeLists.txt  copy_traits.ixx  detector.ixx  function_traits.ixx  type_traits.ixx
tests/: CMakeLists.txt  compact_optional.cpp  compact_optional.ixx  generate_tests.cmake  lib2_tests.cpp
tests/fmt/: CMakeLists.txt  character.ixx  chrono.ixx  floating.ixx  fmt.cpp  fmt.ixx  integral.ixx  string.ixx
tests/io/: CMakeLists.txt  file.ixx  fstream.ixx  io.cpp  io.ixx  iostream.ixx  istream.ixx  ostream.ixx  read_test.txt  stringstream.ixx  write_test.txt
tests/match/: CMakeLists.txt  match.ixx
tests/meta/: CMakeLists.txt  meta.cpp  meta.ixx  value_list.ixx
tests/scan/: scan.ixx
tests/strings/: CMakeLists.txt  character.ixx  lazy_string.ixx  strings.cpp  strings.ixx  widen.ixx
tests/type_traits/: CMakeLists.txt  type_traits.cpp  type_traits.ixx
